updated the packages

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
       </div>
     </section>
 
-    <a 
-      href="https://github.com/finmavis/webpack-4-boilerplate" 
-      target="_blank" 
+    <a
+      href="https://github.com/finmavis/webpack-4-boilerplate"
+      target="_blank"
       rel="noopener noreferrer"
       class="link"
     >
-      Documentation
+      wae
     </a>
   </body>
 </html>
