updated the packages

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Webpack 4 Boilerplate</title>
+    <script src="https://code.jquery.com/jquery-2.2.4.js"
+            integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+            crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="header">
       <h1>Webpack 4 Boilerplate</h1>
     </header>
-
+    <!--# include virtual="/includes/new/pre/async" stub="shush" -->
     <section class="example">
       <div class="example-style">
         <p class="from-css">Hi, I'm from CSS</p>
